# eYantra_2022-2023

./: README.md  balancing.ttt  environment.yml
Task1A/: RW_Pendulum.m  Simple_Pendulum.m  Simple_Pulley.m
Task1C/: Task1c_practice.ttt  task1C.ttt
Task_0A/: task0a_output.txt
Task_0B/: Function_File.m  Main_File.m
Task_2A/: DairyBike.ttm
optim-1.5.0/: NEWS
optim-1.5.0/doc/: optim.info  optim.texi  optim.txi
optim-1.5.0/doc/html/: Additional-parameters.html  Common-frontend-options.html  Common-optimization-options.html  LinearRegression.html  Zero-finders.html  index.html  linprog.html  nmsmax.html  nonlin_005fmin.html  nonlin_005fresidmin.html  numgradient.html  numhessian.html  octave_005fsqp.html  quadprog.html  residmin_005fstat.html  samin.html  wpolyfit.html
optim-1.5.0/inst/: jacobs.m  lsqcurvefit.m  lsqlin.m  lsqnonlin.m  nlinfit.m  nonlin_min.m  nonlin_residmin.m  powell.m  quadprog.m  residmin_stat.m  vfzero.m
optim-1.5.0/inst/private/: __read_options__.m
optim-1.5.0/src/: Makefile.in  __bfgsmin.cc  __disna_optim__.cc  configure  configure.ac  mkdoc.pl  munge-texi.pl  numgradient.cc  numhessian.cc  samin.cc
task1B/: RW_pendulum.ttt  RW_task1B_Pendulum.m  task1b_output.txt
